--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.1.8",
+    "chart.js": "^4.5.0",
     "postcss": "^8.5.4",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
@@ -27,6 +28,7 @@
     "tailwindcss": "^4.1.8",
     "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
+    "typescript-cookie": "^1.0.6",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
